# golf-ball-launch-calculator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ballTracking.cpp  ballTracking.h  main.cpp  video.cpp  video.h
assets/: example_output.txt
include/: ballLocate.h  ballTracking.h  opticalFlow.h  video.h
src/: ballLocate.cpp  ballTracking.cpp  main.cpp  opticalFlow.cpp  video.cpp
